[package]
name = "subotai"
version = "1.0.0"
authors = ["PabloMansanet <pablomansanet@gmail.com>"]
description = "Kademlia based DHT"
repository = "https://github.com/PabloMansanet/subotai"
readme = "README.md"
keywords = ["kademlia", "DHT", "p2p", "kad", "network"]
documentation = "https://PabloMansanet.github.io/subotai/subotai"
license = "MIT"

[dependencies]
bincode = "1.2"
itertools = "0.8"
log = "0.4"
rand = "0.7"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
bus = "1.*.*"
time = "0.1.*"
sha1 = "0.6.0"
